tests/baselines/reference/typeArgumentInferenceWithClassExpression2.errors.txt
tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression2.ts(6,5): error TS2345: Argument of type 'typeof (Anonymous class)' is not assignable to parameter of type 'typeof (Anonymous class)'.
  Type '(Anonymous class)' is not assignable to type 'foo<{}>.(Anonymous class)'.
    Property 'prop' is missing in type '(Anonymous class)'.


==== tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression2.ts (1 errors) ====
    function foo<T>(x = class { prop: T }): T {
        return undefined;
    }
    
    // Should not infer string because it is a static property
    foo(class { static prop = "hello" }).length;
        ~~~~~
!!! error TS2345: Argument of type 'typeof (Anonymous class)' is not assignable to parameter of type 'typeof (Anonymous class)'.
!!! error TS2345:   Type '(Anonymous class)' is not assignable to type 'foo<{}>.(Anonymous class)'.
!!! error TS2345:     Property 'prop' is missing in type '(Anonymous class)'.